--- a/west.html
+++ b/west.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Study Spots - Home - West</title>
     <link rel="stylesheet" href="css/style.css">
@@ -16,17 +16,22 @@
 <body>
 
 
+<header class="areas-page-header gridlines">
 
-    
-<header class="header-area">
+    <div class="breadcrumb">
+        <p> <a class="breadcrumb-home" href="index.html">Home</a> / West </p>
+    </div>
 
-    <h1>Study Spots in Toronto</h1>
-
-    <div class="header-container">
+    <div class="areas-page-header-h1">
+        <h1> <a class="link-home" href=index.html> Study Spots in Toronto </a> </h1>
+    </div> 
+    <div class="areas-page-label-container">
         <div class="character-left">
             <img src="images/character-blue4.png" alt="character walking, looking to the right">
         </div>
-        <h2>West</h2>
+        <div class="areas-page-label"> 
+            <h2>West</h2> 
+        </div>
         <div class="character-right">
             <img src="images/character-blue2.png" alt="character sitting and working on laptop">
         </div>
@@ -36,10 +41,10 @@
 
 <nav class="nav-container">
     <div> <h3> <a class=nav href="north.html">North</a> </h3> </div>
-    <div> <h3> <a class=nav href="south.html">South</a> </h3> </div>
-    <div> <h3> <a class=nav href="midtown.html">Midtown</a> </h3> </div>
-    <div> <h3> <a class=nav href="west.html">West</a> </h3> </div>
-    <div> <h3> <a class=nav href="east.html">East</a> </h3> </div>
+    <div> <h3> <a class="nav" href="south.html">South</a> </h3> </div>
+    <div> <h3> <a class="nav" href="midtown.html">Midtown</a> </h3> </div>
+    <div class="nav-current"> <h3> <a class="nav" href="west.html">West</a> </h3> </div>
+    <div> <h3> <a class="nav" href="east.html">East</a> </h3> </div>
 </nav>
 
 
@@ -51,98 +56,244 @@
 
         <section>
             <img src="images/library-icon.png" alt="illustrated book icon">
-            <h4>Location 1</h4>
-            <h4>Address</h4>
+            <h4> <a class="location-link" href="link" target="_blank"> Toronto Public Library (Parkdale) </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>1303 Queen Street W</p>
             <br>
-            <p>Charging Outlet: __</p>
-        </section>
 
-        <section>
-            <img src="images/library-icon.png" alt="illustrated book icon">
-            <h4>Location 2</h4>
-            <h4>Address</h4>
+            <!-- for html tables: https://www.w3schools.com/html/html_tables.asp-->
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">9AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">1:30PM–5PM</td>
+                </tr>
+            </table>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <br>
-            <p>Charging Outlet: __</p>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 3</h4>
-            <h4>Address</h4>
+            <h4> <a class="location-link" href="link" target="_blank"> Cosette Coffee </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>1715 Bloor Street W</p>
             <br>
-            <p>Charging Outlet: __</p>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
+        </section>
+
+        <section>
+            <img src="images/coffee-icon.png" alt="illustrated coffee icon">
+            <h4> <a class="location-link" href="link" target="_blank"> Typist Studios & Coffee </a> </h4>
+            <br>
+            <p>390 Dupont Street</p>
+            <br>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">CLOSED</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">9AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">9AM–6PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">9AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">9AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">9AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">9AM–6PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">unavailable</span> </p>
             </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 4</h4>
-            <h4>Address</h4>
+            <h4> <a class="location-link" href="link" target="_blank"> Rois Cream </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>382 Keele Street</p>
             <br>
-            <p>Charging Outlet: __</p>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">CLOSED</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">9AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">9AM–5PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">limited quantity</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 5</h4>
-            <h4>Address</h4>
+            <h4> <a class="location-link" href="link" target="_blank"> Osprey Cafe </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>1714 Queen Street W</p>
             <br>
-            <p>Charging Outlet: __</p>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">CLOSED</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">9AM–8PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">9AM–8PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">9AM–8PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">9AM–10PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">9AM–10PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">9AM–5PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">unavailable</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 6</h4>
-            <h4>Address</h4>
+            <h4> <a class="location-link" href="link" target="_blank"> AM Coffee Studio </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>2233 Dundas Street W</p>
             <br>
-            <p>Charging Outlet: __</p>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">8AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">9AM–4PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">limited quantity</span> </p>
         </section>
 
 
@@ -152,11 +303,43 @@
 </main>
 
 
+
 <footer>
 
-    <p>by Leah Hwang</p>
+    <div>
+        <table>
+            <tr>
+                <td style="text-transform: uppercase">Contact</td>
+                <td> <a class="p-link" href="mailto:hleah@ocadu.ca"> hleah@ocadu.ca </a> </td>
+            </tr>
+        </table>
+        <br>
+        <table>
+            <tr>
+                <td style="text-transform: uppercase">Typefaces</td>
+                <td>Unkempt by Sideshow;</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Syne by Bonjour Monde, Lucas Descroix, and George Triantafyllakos;</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Lato by Lukasz Dziedzic.</td>
+            </tr>
+        </table>
+        <br>
+        <table>
+            <tr>
+                <td style="text-transform: uppercase">Open Source Map</td>
+                <td> <a class="p-link" href="Leafletjs.com"> leaflet.js </a> </td>
+            </tr>
+        </table>    
+    </div>
     <br>
-    <p></p>
+    <br>
+    <p style="text-align: center; text-transform: uppercase">© 2025 Study Spots in Toronto</p>
+    <p style="text-align: center; text-transform: uppercase;">Website and Illustrations made by Leah Hwang</p>
 
 </footer>
 
