--- a/south.html
+++ b/south.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Study Spots - Home - South</title>
     <link rel="stylesheet" href="css/style.css">
@@ -16,17 +16,22 @@
 <body>
 
 
+<header class="areas-page-header gridlines">
 
-    
-<header class="header-area">
+    <div class="breadcrumb">
+        <p> <a class="breadcrumb-home" href="index.html">Home</a> / South </p>
+    </div>
 
-    <h1>Study Spots in Toronto</h1>
-
-    <div class="header-container">
+    <div class="areas-page-header-h1">
+        <h1> <a class="link-home" href=index.html> Study Spots in Toronto </a> </h1>
+    </div> 
+    <div class="areas-page-label-container">
         <div class="character-left">
-            <img src="images/character-blue5.png" alt="character standing with backpack, looking to the right" style="transform: scaleX(-1);">
+            <img src="images/character-blue5.png" style="transform: scaleX(-1);" alt="character wearing backpack, looking to the right">
         </div>
-        <h2>South</h2>
+        <div class="areas-page-label"> 
+            <h2>South</h2> 
+        </div>
         <div class="character-right">
             <img src="images/character-blue3.png" alt="character sitting and working with paper">
         </div>
@@ -36,10 +41,10 @@
 
 <nav class="nav-container">
     <div> <h3> <a class=nav href="north.html">North</a> </h3> </div>
-    <div> <h3> <a class=nav href="south.html">South</a> </h3> </div>
-    <div> <h3> <a class=nav href="midtown.html">Midtown</a> </h3> </div>
-    <div> <h3> <a class=nav href="west.html">West</a> </h3> </div>
-    <div> <h3> <a class=nav href="east.html">East</a> </h3> </div>
+    <div class="nav-current"> <h3> <a class="nav" href="south.html">South</a> </h3> </div>
+    <div> <h3> <a class="nav" href="midtown.html">Midtown</a> </h3> </div>
+    <div> <h3> <a class="nav" href="west.html">West</a> </h3> </div>
+    <div> <h3> <a class="nav" href="east.html">East</a> </h3> </div>
 </nav>
 
 
@@ -51,98 +56,244 @@
 
         <section>
             <img src="images/library-icon.png" alt="illustrated book icon">
-            <h4>Toronto Reference Library (Yonge-Bloor)</h4>
-            <h4>789 Yonge Street</h4>
+            <h4> <a class="location-link" href="https://www.torontopubliclibrary.ca/torontoreferencelibrary/" target="_blank"> Toronto Reference Library (Yonge-Bloor) </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">9AM–5PM</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">1:30PM–5PM</span> </p>
+            <p>789 Yonge Street</p>
+            <br>
+
+            <!-- for html tables: https://www.w3schools.com/html/html_tables.asp-->
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">9AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">1:30PM–5PM</td>
+                </tr>
+            </table>
             <br>
             <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
         </section>
 
         <section>
             <img src="images/library-icon.png" alt="illustrated book icon">
-            <h4>Toronto Public Library (Lillian H. Smith)</h4>
-            <h4>239 College Street</h4>
+            <h4> <a class="location-link" href="https://www.torontopubliclibrary.ca/lillianhsmith/" target="_blank"> Toronto Public Library (Lillian H. Smith) </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">9AM–5PM</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">1:30PM–5PM</span> </p>
+            <p>239 College Street</p>
+            <br>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">9AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">1:30PM–5PM</td>
+                </tr>
+            </table>
             <br>
             <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
         </section>
 
         <section>
-            <img src="images/library-icon.png" alt="illustrated coffee icon">
-            <h4>Toronto Public Library (Fort York)</h4>
-            <h4>190 Fort York Boulevard</h4>
+            <img src="images/library-icon.png" alt="illustrated book icon">
+            <h4> <a class="location-link" href="https://www.torontopubliclibrary.ca/fortyork/" target="_blank"> Toronto Public Library (Fort York) </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">9AM–5PM</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">1:30PM–5PM</span> </p>
+            <p>190 Fort York Boulevard</p>
+            <br>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">9AM–8:30PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">9AM–5PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">1:30PM–5PM</td>
+                </tr>
+            </table>
             <br>
             <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
             </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Rooster Coffee House</h4>
-            <h4>568 Jarvis Street</h4>
+            <h4> <a class="location-link" href="https://roostercoffeehouse.com/pages/king-st-east-1" target="_blank"> Rooster Coffee House </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">7AM–7PM</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">7AM–7PM</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">7AM–7PM</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">7AM–7PM</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">7AM–7PM</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">7AM–7PM</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">7AM–7PM</span> </p>
+            <p>5193 Yonge Street</p>
             <br>
-            <p>Charging Outlet: <span style="text-transform: uppercase;">limited quantity</span> </p>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">7AM–7PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">limited quantity</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Rooms</h4>
-            <h4>17 Baldwin Street</h4>
+            <h4> <a class="location-link" href="https://www.instagram.com/17baldwinst/?hl=en" target="_blank"> Rooms </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
+            <p>17 Baldwin Street</p>
             <br>
-            <p>Charging Outlet: <span style="text-transform: uppercase;">unavailable</span> </p>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">8AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">8AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">8AM–6PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">8AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">8AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">8AM–6PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">8AM–6PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">unavailable</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Columbus Café and Co Adélaide</h4>
-            <h4>283 Adelaide Street W</h4>
+            <h4> <a class="location-link" href="https://www.columbuscafe.com/en/welcome/" target="_blank"> Columbus Café and Co Adélaide </a> </h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
+            <p>283 Adelaide Street W</p>
             <br>
-            <p>Charging Outlet: <span style="text-transform: uppercase;">unavailable</span> </p>
+            <table>
+                <tr>
+                    <td>Monday:</td>
+                    <td class="p-bold">6AM–9PM</td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td class="p-bold">6AM–9PM</td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td class="p-bold">6AM–9PM</td>
+                </tr>
+                <tr >
+                    <td>Thursday:</td>
+                    <td class="p-bold">6AM–9PM</td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td class="p-bold">6AM–9PM</td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td class="p-bold">6AM–9PM</td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td class="p-bold">6AM–9PM</td>
+                </tr>
+            </table>
+            <br>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">limited quantity</span> </p>
         </section>
 
 
@@ -152,11 +303,43 @@
 </main>
 
 
+
 <footer>
 
-    <p>by Leah Hwang</p>
+    <div>
+        <table>
+            <tr>
+                <td style="text-transform: uppercase">Contact</td>
+                <td> <a class="p-link" href="mailto:hleah@ocadu.ca"> hleah@ocadu.ca </a> </td>
+            </tr>
+        </table>
+        <br>
+        <table>
+            <tr>
+                <td style="text-transform: uppercase">Typefaces</td>
+                <td>Unkempt by Sideshow;</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Syne by Bonjour Monde, Lucas Descroix, and George Triantafyllakos;</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Lato by Lukasz Dziedzic.</td>
+            </tr>
+        </table>
+        <br>
+        <table>
+            <tr>
+                <td style="text-transform: uppercase">Open Source Map</td>
+                <td> <a class="p-link" href="Leafletjs.com"> leaflet.js </a> </td>
+            </tr>
+        </table>    
+    </div>
     <br>
-    <p></p>
+    <br>
+    <p style="text-align: center; text-transform: uppercase">© 2025 Study Spots in Toronto</p>
+    <p style="text-align: center; text-transform: uppercase;">Website and Illustrations made by Leah Hwang</p>
 
 </footer>
 
